<resources>
    <string name="app_name">Expense Management</string>

    <!-- Bottom Navigation Area -->
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>

    <!-- Instructions Area -->
    <string name="instructions_trip_information"><![CDATA[
        \n
        To delete all the data from the database check the option from the toolbar.\n\n

        Use the button (+) from the bottom of the screen to add new trips.\n
        To Edit or Delete a Trip check the dots from the specific trip card view.\n\n

        Observation: when you delete a trip all the expenses related to the trip will as well be removed from database.\n\n

        To add expenses for a trip click on the image card view.\n
    ]]></string>

    <string name="instructions_expense_information"><![CDATA[
        \n
        Use the button (+) from the bottom of the screen to add new expenses.\n
        To Edit or Delete an Expense check the dots from the specific expense card view.\n\n
        To view an expense click on the image card view.\n
    ]]></string>

    <string name="instructions_search_information"><![CDATA[
        \n
        The filter will get the trips that will contains some of the characters entered.\n
        To view the details of a trip click on the name.\n
        Check the menu to use the advance search filter.
    ]]></string>


    <!-- Add, Edit, Delete and View Trip Area -->
    <string name="name_trip_value_hint">value</string>
    <string name="name_trip_hint">Name, e.g: meeting, conference</string>
    <string name="destination_trip_hint">Destination, e.g: London</string>
    <string name="date_trip_hint">Date, e.g: day/month/year 24/12/1990</string>
    <string name="risk_assessment_trip_hint">Risk Assessment: Yes or No</string>
    <string name="description_trip_hint">Description, e.g: Meeting to speak about the details of the next construction phase</string>
    <string name="duration_trip_hint">Duration, e.g: 10 days, 1 hour</string>
    <string name="aim_trip_hint">Aim, e.g: set the budget</string>
    <string name="status_trip_hint">Status, e.g: Started, OnGoing, Finished</string>
    <string name="add_save_trip_db_button_text">Add trip</string>
    <string name="update_save_trip_db_button_text">Update trip</string>

    <!-- Add, Edit, Delete and View Expense Area -->
    <string name="type_expense_hint">e.g: travel, food, other</string>
    <string name="amount_expense_hint">e.g: 100 dollars</string>
    <string name="time_expense_hint">Enter time, 24 Hour Format</string>
    <string name="additional_comments_expense_hint">e.g: comments about expense, conference</string>
    <string name="save_expense_db_button_text">Add Expense</string>
    <string name="update_expense_db_button_text">Update Expense</string>

    <!-- Main Trip Activity Menu Settings -->
    <string name="upload_data_cloud_option">Upload Data Cloud</string>
    <string name="delete_all_data_option">Delete All Data</string>

    <!-- Trip Menu -->
    <string name="view_trip_option_menu">View</string>
    <string name="edit_trip_option_menu">Edit</string>
    <string name="delete_trip_option_menu">Delete</string>

    <!-- Expense Menu -->
    <string name="edit_expense_option_menu">Edit</string>
    <string name="delete_expense_option_menu">Delete</string>

    <!-- activity_view_trip -->
    <string name="status_activity_view_trip">Status</string>
    <string name="aim_activity_view_trip">Aim</string>
    <string name="duration_activity_view_trip">Duration</string>
    <string name="description_activity_view_trip">Description</string>
    <string name="risk_assessment_activity_view_trip">Risk Assessment</string>
    <string name="date_activity_view_trip">Date</string>
    <string name="destination_activity_view_trip">Destination</string>
    <string name="name_activity_view_trip">Name</string>

    <!-- activity_view_expense -->
    <string name="type_activity_view_expense">Type</string>
    <string name="amount_activity_view_expense">Amount</string>
    <string name="time_activity_view_expense">Time</string>
    <string name="additional_comments_activity_view_expense">Additional Comments</string>

    <!-- Search Trip Database -->
    <string name="search_trip_db_button">Search Trip</string>
    <string name="search_trip_hint">meeting, travel</string>
    <string name="reset_search_trip_button">Reset Filter</string>
    <string name="search_trip_name">Trip Name</string>
    <string name="search_advance_item">Advance Search</string>
    <string name="advance_search_trip_button">Search</string>

    <!-- Settings Activity -->
    <string name="instructions_trip_page">Instructions Trip</string>
    <string name="instructions_expense_page">Instructions Expense</string>
    <string name="instructions_search_page">Instructions Search</string>

    <!-- Other Settings -->
    <string name="alt_image">TODO</string>
    <string name="trip_name_text_card">Trip Name</string>
    <string name="expense_type_card_view">Expense Type</string>
    <string name="textview_activity_settings">TextView</string>
    <string name="textview_activity_search">TextView</string>

</resources>
