<?xml version="1.0" encoding="utf-8"?>
<!--
    https://medium.com/@makkenasrinivasarao1/bottom-navigation-in-android-application-with-activities-material-design-7a056b8cf38
-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/home_navigation"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search_navigation"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings_navigation"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom" />

</menu>
