<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home_bottom_nav">

    <!--
    <activity
        android:id="@+id/navigation_home_activity"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    -->

    <fragment
        android:id="@+id/home_bottom_nav"
        android:name="com.example.app.MainActivity"
        android:label="@string/title_home"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/search_bottom_nav"
        android:name="com.example.app.SearchActivity"
        android:label="@string/title_search"
        tools:layout="@layout/activity_search" />

    <fragment
        android:id="@+id/settings_bottom_nav"
        android:name="com.example.app.SettingsActivity"
        android:label="@string/title_settings"
        tools:layout="@layout/activity_settings" />

</navigation>