<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpenseActivity"
    android:padding="30dp">

    <EditText
        android:id="@+id/type_expense_column"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/type_expense_hint"
        android:minHeight="48dp"
        android:textColor="#546E7A"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/amount_expense_column"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/amount_expense_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#546BBA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_expense_column" />

    <EditText
        android:id="@+id/time_expense_column"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/time_expense_hint"
        android:minHeight="48dp"
        android:textColor="#546E7A"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_expense_column" />

    <EditText
        android:id="@+id/additional_comments_expense_column"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/additional_comments_expense_hint"
        android:minHeight="48dp"
        android:textColor="#546E7A"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_expense_column"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/save_expense_db_button_text"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:text="@string/save_expense_db_button_text"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additional_comments_expense_column" />

</androidx.constraintlayout.widget.ConstraintLayout>