<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".expense.UpdateExpenseActivity"
    android:padding="30dp">

    <EditText
        android:id="@+id/update_type_expense_column"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/type_expense_hint"
        android:minHeight="48dp"
        android:textColor="#546E7A"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/update_amount_expense_column"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/amount_expense_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#546BBA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_type_expense_column"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/update_time_expense_column"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/time_expense_hint"
        android:minHeight="48dp"
        android:textColor="#546E7A"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_amount_expense_column"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/update_additional_comments_expense_column"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/additional_comments_expense_hint"
        android:minHeight="48dp"
        android:textColor="#546E7A"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_time_expense_column"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button
        android:id="@+id/update_save_expense_db_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:text="@string/update_expense_db_button_text"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_additional_comments_expense_column" />

</androidx.constraintlayout.widget.ConstraintLayout>
