<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UpdateTripActivity"
    android:padding="5dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="3dp">

        <EditText
            android:id="@+id/update_name_trip_column"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/name_trip_hint"
            android:minHeight="48dp"
            android:textColor="#546E7A"
            android:inputType="textPersonName"
            android:autofillHints="@string/name_trip_value_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/update_destination_trip_column"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/name_trip_value_hint"
            android:ems="10"
            android:hint="@string/destination_trip_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#546BBA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_name_trip_column" />

        <EditText
            android:id="@+id/update_date_trip_column"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/date_trip_hint"
            android:minHeight="48dp"
            android:textColor="#546E7A"
            android:inputType="date"
            android:focusable="false"
            android:autofillHints="@string/name_trip_value_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_destination_trip_column" />

        <Spinner
            android:id="@+id/update_risk_assessment_trip_column"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_date_trip_column"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/update_description_trip_column"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/description_trip_hint"
            android:minHeight="48dp"
            android:textColor="#546E7A"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:autofillHints="@string/name_trip_value_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_risk_assessment_trip_column" />


        <EditText
            android:id="@+id/update_duration_trip_column"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/duration_trip_hint"
            android:minHeight="48dp"
            android:textColor="#546E7A"
            android:inputType="textPersonName"
            android:autofillHints="@string/name_trip_value_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_description_trip_column" />

        <EditText
            android:id="@+id/update_aim_trip_column"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/aim_trip_hint"
            android:minHeight="48dp"
            android:textColor="#546E7A"
            android:inputType="textPersonName"
            android:autofillHints="@string/name_trip_value_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_duration_trip_column" />

        <Spinner
            android:id="@+id/update_status_trip_column"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_aim_trip_column"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/update_save_trip_db_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:text="@string/update_save_trip_db_button_text"
            android:textSize="20sp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_status_trip_column" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
