<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:padding="30dp">

    <EditText
        android:id="@+id/advance_search_trip_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/type_expense_hint"
        android:minHeight="48dp"
        android:textColor="#546E7A"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/advance_search_trip_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/amount_expense_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#546BBA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advance_search_trip_name"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/advance_search_trip_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/time_expense_hint"
        android:minHeight="48dp"
        android:textColor="#546E7A"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advance_search_trip_destination"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/advance_search_trip_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/advance_search_trip_button"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advance_search_trip_date" />

</androidx.constraintlayout.widget.ConstraintLayout>
