<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/instructions_trip_page"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/instructions_trip_page"
        android:textColor="#2d2d2d"
        android:textSize="13sp"
        android:cardCornerRadius="25dp"
        android:clickable="true"
        android:focusable="false"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/instructions_expense_page"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/instructions_expense_page"
        android:textColor="#2d2d2d"
        android:cardCornerRadius="25dp"
        android:textSize="13sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="82dp"
        app:layout_constraintTop_toBottomOf="@+id/instructions_trip_page"/>

    <TextView
        android:id="@+id/instructions_search_page"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/instructions_search_page"
        android:textColor="#2d2d2d"
        android:cardCornerRadius="25dp"
        android:textSize="13sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="129dp"
        app:layout_constraintTop_toBottomOf="@+id/instructions_expense_page"/>

    <!-- https://medium.com/@makkenasrinivasarao1/bottom-navigation-in-android-application-with-activities-material-design-7a056b8cf38 -->
    <include
        layout="@layout/menu_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
